Started extracting ParseDocument XML